<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/tvRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_radio"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnRadioSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_radio_save" />

        <Button
            android:id="@+id/btnRadioRestore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_radio_restore" />

        <TextView
            android:id="@+id/tvMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_music"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnMusicSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_music_save" />

        <Button
            android:id="@+id/btnMusicRestore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_music_restore" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.92"
            android:columnCount="1" >

            <FrameLayout
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="0" >
            </FrameLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="94dp"
                android:layout_height="94dp"
                android:layout_column="0"
                android:layout_gravity="center|center_vertical"
                android:layout_row="0"
                android:src="@drawable/ic_launcher" />

        </GridLayout>

    </LinearLayout>

</RelativeLayout>
